Make <del> delete visual selection by default

BUG: 298513